@@ -14,4 +14,5 @@
 
   <!-- Non standard method names. -->
   <suppress checks="MethodName" files="HTTPRequest.java"/>
+  <suppress checks="MethodName" files="InstrumentedPyReflectedFunction.java"/>
 </suppressions>
